[project]
name = "adobescrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.8.0",
    "ell-ai>=0.0.13",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scrapy>=2.11.2",
    "sqlmodel==0.0.21",
]
