[project]
name = "adobescrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "black>=24.8.0",
    "fastapi[standard]>=0.115.0",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "scrapy>=2.11.2",
    "sqlmodel>=0.0.22",
]
